# VHPCK

./: .gitignore  README.md  lib_huffman.h  main.cpp  pck_spacer.h
apps/testpack/: CMakeLists.txt
apps/testpack/src/: main.cpp
apps/testunpack/: CMakeLists.txt
apps/testunpack/src/: main.cpp
misc/: dynmem.hpp  fiotools.hpp
pck/: bitptr.hpp  lib_huffman.h  pck_spacer.cpp  pck_spacer.h  vhpck21.hpp  vhpck21defs.hpp  vhplatform.h  vhunpck21.hpp
pck10/: lib_huffman.h  lib_huffman_bptr.h  lib_huffman_defs.h
pck21/: vhunpck21.hpp
test/testpck10/: CMakeLists.txt
test/testpck10/src/: testpck10.cpp
